# Cursor-animation

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md
GUI/: CMakeLists.txt  Main.qml  SettingsBackend.cpp  SettingsBackend.hpp  UltralightWebCursorGUI_Desktop.in  kcm_ultralightwebcursor.json  main_settings.cpp  main_settings.hpp
GUI/ui/: main.qml
src/: CMakeLists.txt  UltralightCursorEffect.cpp  metadata.json
src/lib/: KwinMouseProvider.cpp  MouseUpload.cpp  UltralightHtmlEffect.cpp  UserConfig.cpp  WaylandBack.cpp
src/lib/Quick/PluginPath/: PluginPath.cpp
src/lib/UltralightPl/: WebListener.hpp
src/lib/header/: KwinMouseProvider.hpp  MouseProvider.hpp  MouseUpload.hpp  UltralightCursorEffect.hpp  UltralightHtmlEffect.hpp  UserConfig.hpp  WaylandBack.hpp
